cleaned user doc

--- a/elteikthesis-master/samples_hu/intro.tex
+++ b/elteikthesis-master/samples_hu/intro.tex
@@ -13,21 +13,21 @@ A tudományág fejlődését ösztönözte és elősegítette a digitális szám
 %Az 1950-es években jelentek meg a véges automaták, illetve ekkor hódított teret  a Chomsky által bevezettt nyelvhierarchia, ami a formális nyelvek megfogalmazásában bontakozott ki.
 
 A mai számításelmélet nagyon változazos témák tárházával rendelkezik, 
-magába foglalja az algoritmusok, adatszerkezetek, elosztott és párhuzomísott számítások, kvantumszámítások, biológiai számítások vizsgálatát, illetve nem utolsó sorban a bonyolultságelméletet és az információelméletet.
+magába foglalja az algoritmusok, adatszerkezetek, elosztott és párhuzamosított számítások, kvantumszámítások, biológiai számítások vizsgálatát, illetve nem utolsó sorban a bonyolultságelméletet és az információelméletet.
 Mindezekből látszik, hogy milyen szerteágazó tematikája és problémaköre van a számításelméletnek és hogy ezek az irányvonalak folyamatosan képesek fejlődni és gazdagodni.
 
 \section{Membránrendszerek}
 
 A 20. század második felében egyre nagyobb figyelmet kaptak az olyan számítások, amely a természetben vagy valamilyen természeti jelenséghez kapcsolódóan mennek végbe. Ezen megfigyelések eredményeképpen megszületett a biológiai számítások területe, amelynek számos új módszert és algoritmust köszönhetünk. Ide tartoznak például a genetikus algoritmusok (általánosabban véve az evolúciós algoritmusok), illetve a neurális hálók. Ezen irányvonal kiterjesztésének tekinthetőek az 21.század legelején kibontakozó területek mint a membránszámítások és a DNS számítások, amely közül az utóbbit a molekuláris biológia alapjaira modelleztek.
 
-A membránszámítások legnagyobb inspirációját a biológiai sejtek jelentik, amelyek az élet legelemibb építőelemei. A sejtek működésében és struktúrájában pedig elengedhetetlenek a membránok, amelyek a sejten belüli rétegződést határozzák meg. Egy sejtet a környezetétől a legkülső membránja (úgynevezett skin) határol el, a rétegződésért pedig a belső membránok felelősek.  Egy-egy ilyen membrán pedig egy saját belső teret, ún. régiót határol el.
+A membránszámítások legnagyobb inspirációját a biológiai sejtek jelentik, amelyek az élet legelemibb építőelemei. A sejtek működésében és struktúrájában pedig elengedhetetlenek a membránok, amelyek a sejten belüli rétegződést határozzák meg. Egy sejtet a környezetétől a legkülső membránja (úgynevezett skin) határol el, a rétegződésért pedig a belső membránok felelősek.  Egy-egy ilyen membrán pedig egy saját belső teret, \textit{régiót} határol el.
 Ezen régiókban pedig kémiai reakciók mehetnek végbe, amely hatására különböző molekulák átvándorolhatnak a membránokon keresztül új régiókba. Ezzel a térbeli struktúráltsággal egészítik ki a membránszámítások a DNS számításokat.A  membránszámítás motivációja, hogy egy olyan modellt tudjuk konstruálni, amely képes a sejtek közötti és sejten belüli molekulák által közvetített információáramlás mechanizmusának leírására, szemléltetésére.
 
-Ezen célkitűzéssel vezette be Gheorge Paun a membránrendszereket 2000-ben. Később az ilyen modelleket P-rendszereknek is elnevezték az ő tiszteletére. Ahhoz, hogy a biokémiai folyamatokat modellezni tudja, figyelembe vette ezen folyamatok törvényszerűségeit. Nevezetesen, hogy az ilyen reakciók végbemeneteléhez kellő számban szükség van a reakcióhoz szükséges kezdeti molekulákra és ha ezek rendelkezésre állnak, akkor a reakció biztosan meg is fog történni. Emellett egyszerre több reakció (vagy akár egy reakció többször) is végbemehet, ha van hozzá(juk) elegendő nyersanyag. Speciális esetekben egy reakció hatására membránok feloldódhatnak, ilyenkor a benne rejlő molekulák és belső régiók az őt körülvevő régióba kerülnek, illetve az is előfordulhat, hogy a reakciók között valamilyen prioritási sorrend is fennállhat; azaz az egyik reakció nem hajtódhat végre, amíg egy a másik reakciónak lehetősége van rá. Ezen reakciók úgynevezett evolúciós lépésekbe szerveződnek, amelyek során a régiók molekulái és a membránrendszer struktúrája is átalakul.
+Ezen célkitűzéssel vezette be Gheorge Paun a membránrendszereket 2000-ben. Később az ilyen modelleket P-rendszereknek is elnevezték az ő tiszteletére. Ahhoz, hogy a biokémiai folyamatokat modellezni tudja, figyelembe vette ezen folyamatok törvényszerűségeit. Nevezetesen, hogy az ilyen reakciók végbemeneteléhez kellő számban szükség van a reakcióhoz szükséges kezdeti molekulákra és ha ezek rendelkezésre állnak, akkor a reakció biztosan meg is fog történni. Emellett egyszerre több reakció (vagy akár egy reakció többször) is végbemehet, ha van hozzá(juk) elegendő nyersanyag. Speciális esetekben egy reakció hatására membránok feloldódhatnak, ilyenkor a benne rejlő molekulák és belső régiók az őt körülvevő régióba kerülnek, illetve az is előfordulhat, hogy a reakciók között valamilyen prioritási sorrend is fennállhat; azaz az egyik reakció nem hajtódhat végre, amíg egy a másik reakciónak lehetősége van rá. Ezen reakciók úgynevezett \textit{evolúciós lépésekbe} szerveződnek, amelyek során a régiók molekulái és a membránrendszer struktúrája is átalakul.
 
 A számítás központi szereplői az előbbi tulajdonságokkal rendelkező reakciók, amelyek a membránrendszerekben szabályoknak nevezünk, a résztvevő molekulákat pedig objektumoknak. Ezek a szabályok régiókhoz vannak rendelve. A szabályok alkalmazására a maximális párhuzamosság elve érvényes, azaz ha a jelenleg alkalmazott szabályok után még alkalmazható lenne egy újabb vagy egy eddig már alkalmazott szabály, akkor az a szabály végre is lesz hajtva az adott evolúciós lépésben. Ennek megfelelően a membránrendszer evolúciós lépések sorozatán megy keresztül, egészen addig, amíg már nincsen egyetlen alkalmazható szabály sem. Ilyenkor a számítás eredményét alapértelmezetten a környezetbe kijutó objektumok számának tekinjük, de ez egyes rendszerekben másképpen is megadható (például egy kijelölt kimeneti régió objektumainak számával).
 
-Érdeklődésemet a téma iránt az SAT eldöntési probléma aktív P-rendszerekkel (amely típust a dolgozatban nem részletezem) való lineáris időben történő megoldása keltette fel. Ez elsőre egy hihetetlen eredmény, hiszen ez volt a legelső probléma, amiről bebizonyították, hogy NP-teljes. Az ellentmondást a membránrendszerek masszív párhuzamosítási képességével lehet megmagyarázni, amelynek segítségével a változók és a klózok számának függvényében igaz, hogy lineáris időben megoldható, viszont ezt a membránrendszert szimuláló Turing gép már nem tudna minden bemeneti példányra lineáris időben leállni. Ezután kezdtem el foglalkozni membránrendszerekkel és úgy éreztem, hogy egy szimulációs szoftver hasznosnak bizonyulna kutatási és oktatási célokra egyaránt.
+Érdeklődésemet a téma iránt az SAT eldöntési probléma aktív P-rendszerekkel (amely típust a dolgozatban nem részletezem) való lineáris időben történő megoldása keltette fel. Ez elsőre egy hihetetlen eredmény, hiszen ez volt a legelső probléma, amiről bebizonyították, hogy NP-teljes. Az ellentmondást a membránrendszerek masszív párhuzamosítási képességével lehet megmagyarázni, amelynek segítségével a változók és a klózok számának függvényében igaz, hogy lineáris időben leáll, viszont ezt a membránrendszert szimuláló Turing gép már nem tudna minden bemeneti példányra lineáris időben leállni. Ezután kezdtem el foglalkozni membránrendszerekkel és úgy éreztem, hogy egy szimulációs szoftver hasznosnak bizonyulna kutatási és oktatási célokra egyaránt.
 
 \section{Megvalósítandó feladat}
 
