--- a/elteikthesis-master/samples_hu/user.tex
+++ b/elteikthesis-master/samples_hu/user.tex
@@ -96,10 +96,10 @@ A \ref{fig:create_system} segítségével alkotott membránrendszerek még nem f
 \begin{figure}[H]
 	\centering
 	\subcaptionbox{Régió szabályainak szerkesztése alapmodellben\label{fig:rule_edit_base}}{
-		\includegraphics[width=0.45\linewidth]{rule_and_object_edit.png}}
+		\includegraphics[width=0.45\linewidth]{rule_and_object_base.png}}
 	\vspace{5pt}
 	\subcaptionbox{Régió szabályainak szerkesztése szimport-antiport rendszerben\label{fig:rule_edit_symport}}{
-		\includegraphics[width=0.45\linewidth]{rule_and_object_edit.png}}
+		\includegraphics[width=0.38\linewidth]{rule_and_object_symport.png}}
 	\caption{Membránrendszerek különböző formátumú szabályokkal}
 	\label{fig:rule_edits}
 \end{figure}
@@ -192,4 +192,17 @@ Miután a felhasználó létrehozott egy membránrendszert és szimulálta azt, 
 
 A szoftver használata a membránrendszerek előzetes ismerete nélkül kriptikus tud lenni, ezért a felhasználó útbaigazítására és a szükséges jellemzőkkel kapcsolatos tudnivalók ismertetésére egy súgó funkció is megtalálható a menüsorban.
 
+A \textit{Súgó} gombra való kattintás után jelenik meg az ablak, amelyben a korábbi fejezetekhez hasonló felbontásban találhatóak meg az alkalmazás használatával kapcsolatos információk.
+
 A használati útmutató a \textit{Markdown} formátumnak megfelelő formázásban jelenik meg, amely jól strukturált és könnyen olvasható. A tartalma fejezetekre van bontva, amelyek kitérnek a korábban említett dialógusablakok sajátosságaira, az objektumokkal és szabályokkal kapcsolatos elvárásokra és a szoftver helyes használatának módjára.
+
+
+
+A használati útmutató segítségével a felhasználó a membránrendszerekkel kapcsolatos alapvető információkat és a szoftver használatához szükséges tudnivalókat ismerheti meg. A súgó részletes tájékoztatást ad a membránrendszerek létrehozásáról, objektumainak és szabályainak megváltoztatásának módjáról és azok helyes formátumáról, a mentés és betöltés folyamatáról, illetve a számítási eredmény értelmezéséről.
+
+\begin{figure}[H]
+	\centering
+	\scalebox{0.5}[0.5]{\includegraphics{help_dialog.png}}
+	\caption{Használati útmutató ablak}
+	\label{fig:help_dialog}
+\end{figure}
