--- a/elteikthesis-master/samples_hu/impl.tex
+++ b/elteikthesis-master/samples_hu/impl.tex
@@ -104,8 +104,17 @@ Ezen két típuson kívül léteznek még $uniport$ szabályok is, amelyek felfo
 A konfigurációkkal kapcsolatos definíciók megegyeznek az alapmodellben leírtakkal, kiegészítve azt a környezet $O-E$-beli objektumaiból álló $\omega_0$ kezdeti multihalmazt reprezentáló sztringgel, a későbbi konfigurációkban pedig $w_0$-val.
 
 
+\section{Tervezés}
 
 
+\subsection{Modell}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics{model_uml.png}
+	\caption{A főablak az alkalmazás megnyitásakor}
+	\label{fig:main_window}
+\end{figure}
 
 
 
